<resources>
    <string name="app_name">WellNess Warden</string>
    <string name="my_profile">My profile</string>
    <string name="food_journal">Food Journal</string>
    <string name="my_food_journal">My Food Journal</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_food_item">Search for Food Item e.g  beef</string>
    <string name="image_of_food">Image of food</string>
    <string name="common_searches">Common Searches</string>
    <string name="roasted_beef">Roasted Beef</string>
    <string name="my_snacks">My Snacks</string>
    <string name="my_dinner">My Dinner</string>
    <string name="my_lunch">My Lunch</string>
    <string name="my_breakfast">My BreakFast</string>
    <string name="calculate_total_intake">Calculate Total Intake</string>
    <string name="today_s_intake">Today\'s Intake</string>
    <string name="add">Add</string>
    <string name="info">Info</string>
    <string name="_1">1</string>
    <string name="add_food_to_today_meal">Add food to any meal</string>
    <string name="snacks">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="refresh">Refresh</string>
    <string name="search_results">Search Results</string>
    <string name="total_intakes_for_today">Total intakes for today</string>
    <string name="all_macro_nutrients">All Macro-Nutrients</string>
    <string name="all_micro_nutrients">All Micro-Nutrients</string>
    <string name="macro_nutrients">Calories - %1$d kcals, Protein - %2$d g,\nCarbs - %3$d g, Fats - %4$d g</string>

    <string name="micro_nutrients">Vitamin A - %1$d μg, Vitamin D - %2$d μg,\nSugars - %3$d g, Iron - %4$d mg,\nCalcium - %5$d mg, Fiber - %6$d g,\nPotassium - %7$d mg, Magnesium - %8$d mg</string>
    <string name="my_caloric_and_nutrient_intake">My Caloric and Nutrient Intake</string>
    <string name="calories_consumed">Calories Consumed: %1$s</string>
    <string name="calories_limit">BMR: %1$s</string>
    <string name="consumed_recommended">Consumed: %1$s %2$s Recommended: %3$s %4$s</string>


</resources>