<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheets_backg"
    tools:context=".BottomSheetSearchFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDrag"
        android:layout_width="45dp"
        android:layout_height="5dp"
        android:elevation="40dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/white_smooth_shape"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAddMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo_paaji_2_semibold"
        android:text="@string/add_food_to_today_meal"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewDrag" />

    <Button
        android:id="@+id/buttonAddToBreakFast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="BreakFast"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonAddToLunch"
        app:layout_constraintTop_toBottomOf="@id/textViewAddMeal" />

    <Button
        android:id="@+id/buttonAddToLunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/lunch"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonAddToBreakFast"
        app:layout_constraintTop_toBottomOf="@id/textViewAddMeal" />

    <Button
        android:id="@+id/buttonAddToDinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonAddToSnacks"
        android:text="@string/dinner"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddToBreakFast" />

    <Button
        android:id="@+id/buttonAddToSnacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/snacks"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonAddToDinner"
        app:layout_constraintTop_toBottomOf="@id/buttonAddToLunch" />


</androidx.constraintlayout.widget.ConstraintLayout>